Updated project information

--- a/PInvoke/Mpr/Vanara.PInvoke.Mpr.csproj
+++ b/PInvoke/Mpr/Vanara.PInvoke.Mpr.csproj
@@ -14,7 +14,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-MultinetGetConnectionPerformance, WNetAddConnection, WNetAddConnection2, WNetAddConnection3, WNetCancelConnection2, WNetCloseEnum, WNetConnectionDialog, WNetConnectionDialog1, WNetDisconnectDialog, WNetDisconnectDialog1, WNetEnumResource, WNetGetConnection, WNetGetLastError, WNetGetNetworkInformation, WNetGetProviderName, WNetGetResourceInformation, WNetGetResourceParent, WNetGetUniversalName, WNetGetUser, WNetOpenEnum, WNetSetLastError, WNetUseConnection
+MultinetGetConnectionPerformance, WNetAddConnection, WNetAddConnection2, WNetAddConnection3, WNetAddConnection4, WNetCancelConnection2, WNetCloseEnum, WNetConnectionDialog, WNetConnectionDialog1, WNetDisconnectDialog, WNetDisconnectDialog1, WNetEnumResource, WNetGetConnection, WNetGetLastError, WNetGetNetworkInformation, WNetGetProviderName, WNetGetResourceInformation, WNetGetResourceParent, WNetGetUniversalName, WNetGetUser, WNetOpenEnum, WNetSetLastError, WNetUseConnection, WNetUseConnection4
 
 Structures
 CONNECTDLGSTRUCT, DISCDLGSTRUCT, NETCONNECTINFOSTRUCT, NETINFOSTRUCT, NETRESOURCE, REMOTE_NAME_INFO, UNIVERSAL_NAME_INFO
