--- a/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
+++ b/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
@@ -14,7 +14,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-WerAddExcludedApplication, WerFreeString, WerRemoveExcludedApplication, WerReportAddDump, WerReportAddFile, WerReportCloseHandle, WerReportCreate, WerReportSetParameter, WerReportSetUIOption, WerReportSubmit, WerStoreClose, WerStoreGetFirstReportKey, WerStoreGetNextReportKey, WerStoreOpen, WerStoreQueryReportMetadataV2
+WerAddExcludedApplication, WerFreeString, WerpGetAADDeviceToken, WerpReportSetMaxProcessHoldMilliseconds, WerpSetAADDeviceToken, WerRemoveExcludedApplication, WerReportAddDump, WerReportAddFile, WerReportCloseHandle, WerReportCreate, WerReportSetParameter, WerReportSetUIOption, WerReportSubmit, WerStoreClose, WerStoreGetFirstReportKey, WerStoreGetNextReportKey, WerStoreOpen, WerStoreQueryReportMetadataV2
 
 Structures
 HREPORT, HREPORTSTORE, WER_DUMP_CUSTOM_OPTIONS, WER_EXCEPTION_INFORMATION, WER_REPORT_INFORMATION, WER_REPORT_METADATA_V2, WER_REPORT_PARAMETER, WER_REPORT_SIGNATURE
