Added all remaining shobjidl_core.h interfaces to Shell32 and SearchApi

--- a/UnitTests/Windows.Shell/Windows.Shell.csproj
+++ b/UnitTests/Windows.Shell/Windows.Shell.csproj
@@ -45,6 +45,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WallpaperTests.cs" />
     <Compile Include="ShellLinkTests.cs" />
     <Compile Include="ShellSearchTests.cs" />
     <Compile Include="ControlPanelTests.cs" />
