--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -74,77 +74,29 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <ProjectReference Include="..\Windows.Shell\Vanara.Windows.Shell.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Controls\CollapsiblePanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\CollapsiblePanelHeader.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\CommandLink.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\CustomButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\CustomComboBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\CustomDrawBase.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\DisabledItemComboBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\EmbeddedContainer.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\EnumComboBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\IPAddressBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\SplitButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\ThemedImageButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\ThemedLabel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\ThemedPanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\ThemedTableLayoutPanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\TrackBarEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\VistaButtonBase.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Dialogs\AccessControlEditor\AccessControlEditorDialog.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Dialogs\CredentialsDialog\CredentialsDialog.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Dialogs\FolderBrowserDialog.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Dialogs\InputDialog.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Dialogs\TaskDialog\TaskDialog.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Extenders\GlassExtenderProvider.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Extenders\VistaControlExtender.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Update="Controls\CollapsiblePanel.cs" />
+    <Compile Update="Controls\CollapsiblePanelHeader.cs" />
+    <Compile Update="Controls\CommandLink.cs" />
+    <Compile Update="Controls\CustomButton.cs" />
+    <Compile Update="Controls\CustomComboBox.cs" />
+    <Compile Update="Controls\CustomDrawBase.cs" />
+    <Compile Update="Controls\DisabledItemComboBox.cs" />
+    <Compile Update="Controls\EmbeddedContainer.cs" />
+    <Compile Update="Controls\EnumComboBox.cs" />
+    <Compile Update="Controls\IPAddressBox.cs" />
+    <Compile Update="Controls\SplitButton.cs" />
+    <Compile Update="Controls\ThemedImageButton.cs" />
+    <Compile Update="Controls\ThemedLabel.cs" />
+    <Compile Update="Controls\ThemedPanel.cs" />
+    <Compile Update="Controls\ThemedTableLayoutPanel.cs" />
+    <Compile Update="Controls\TrackBarEx.cs" />
+    <Compile Update="Controls\VistaButtonBase.cs" />
+    <Compile Update="Dialogs\AccessControlEditor\AccessControlEditorDialog.cs" />
+    <Compile Update="Dialogs\CredentialsDialog\CredentialsDialog.cs" />
+    <Compile Update="Dialogs\FolderBrowserDialog.cs" />
+    <Compile Update="Dialogs\InputDialog.cs" />
+    <Compile Update="Dialogs\TaskDialog\TaskDialog.cs" />
+    <Compile Update="Extenders\GlassExtenderProvider.cs" />
+    <Compile Update="Extenders\VistaControlExtender.cs" />
   </ItemGroup>
 </Project>
