--- a/UnitTests/PInvoke/DnsApi/DnsApi.csproj
+++ b/UnitTests/PInvoke/DnsApi/DnsApi.csproj
@@ -67,7 +67,9 @@
       <Version>3.12.0</Version>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.15.1</Version>
+      <Version>3.16.1</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
