Fixed XML docs, cleaned code, added parameter attributes and missing CoClass values for IShellFolder, added Vanara.Windows.Shell.RecycleBin class and tests

--- a/UnitTests/PInvoke/Shell32/Shell32.csproj
+++ b/UnitTests/PInvoke/Shell32/Shell32.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IShellFolderTests.cs" />
     <Compile Include="PkgDbgSettingsTests.cs" />
     <Compile Include="UrlTests.cs" />
     <Compile Include="ExplorerTests.cs" />
