Completed work on BindContext which wraps IBindCtx

--- a/UnitTests/Windows.Shell/Windows.Shell.csproj
+++ b/UnitTests/Windows.Shell/Windows.Shell.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RecycleBinTests.cs" />
+    <Compile Include="BindContextTests.cs" />
     <Compile Include="WallpaperTests.cs" />
     <Compile Include="ShellLinkTests.cs" />
     <Compile Include="ShellSearchTests.cs" />
