--- a/Windows.Shell/Vanara.Windows.Shell.csproj
+++ b/Windows.Shell/Vanara.Windows.Shell.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Description>Classes for Windows Shell items derived from the Vanara PInvoke libraries. Includes shell items, files, icons, links, and taskbar lists.</Description>
-    <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <TargetFrameworks>net20;net35;net40;net45;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
-    <UseWindowsForms>true</UseWindowsForms>
-    <AssemblyName>Vanara.Windows.Shell</AssemblyName>
-    <PackageId>$(AssemblyName)</PackageId>
-    <PackageTags>pinvoke;vanara;net-extensions;interop</PackageTags>
-    <PackageReleaseNotes>Currently implements:
+	<Description>Classes for Windows Shell items derived from the Vanara PInvoke libraries. Includes shell items, files, icons, links, and taskbar lists.</Description>
+	<AssemblyTitle>$(AssemblyName)</AssemblyTitle>
+	<TargetFrameworks>net20;net35;net40;net45;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+	<UseWindowsForms>true</UseWindowsForms>
+	<AssemblyName>Vanara.Windows.Shell</AssemblyName>
+	<PackageId>$(AssemblyName)</PackageId>
+	<PackageTags>pinvoke;vanara;net-extensions;interop</PackageTags>
+	<PackageReleaseNotes>Currently implements:
 
 Classes
 IComObject, IJumpListItem, AddExtenderEventArgs, AppRegistration, ComClassFactory, CommandVerb, CommandVerbDictionary, ComObject, ControlPanel, ExtenderProviderBase&lt;T&gt;, FileInUseHandler, FileTypeAssociation, IconLocation, IndirectResource, IndirectString, JumpList, JumpListDestination, JumpListItem, JumpListSeparator, JumpListTask, MemoryPropertyStore, MessageEventArgs, MessageLoop, ProgId, PropertyBag, PropertyDescription, PropertyDescriptionList, PropertyStore, PropertyType, PropertyTypeList, ReadOnlyPropertyStore, RecycleBin, RegBasedDictionary&lt;T&gt;, RegBasedSettings, SearchCondition, ShellAssociation, ShellCommand, ShellDropTarget, ShellExecuteCommand, ShellFileInfo, ShellFileNewOpEventArgs, ShellFileOperations, ShellFileOpEventArgs, ShellFolder, ShellImageList, ShellItem, ShellItemArray, ShellItemChangeEventArgs, ShellItemChangeWatcher, ShellItemPropertyStore, ShellItemPropertyUpdates, ShellLibrary, ShellLibraryFolders, ShellLink, ShellRegistrar, ShellSearch, ShellSearchViewSettings, TaskbarButton, TaskbarButtonThumbnail, TaskbarButtonThumbnails, TaskbarList, ThumbnailToolbar, ThumbnailToolbarButton, ThumbnailToolbarButtonCollection, WallpaperManager, WallpaperMonitor, WallpaperSlideshow
@@ -17,31 +17,32 @@ Enumerations
 ChangeFilters, ExecutableType, FileUsageType, FolderItemFilter, LibraryFolderFilter, LibraryViewTemplate, LinkResolution, OperationFlags, ShellIconType, ShellImageSize, ShellItemAttribute, ShellItemComparison, ShellItemDisplayString, ShellItemGetImageOptions, ShellItemToolTipOptions, TaskbarButtonProgressState, TaskbarItemTabThumbnailOption, TransferFlags, VerbMultiSelectModel, VerbPosition, VerbSelectionModel, Visibility, WallpaperFit
 
 </PackageReleaseNotes>
-    <RootNamespace>Vanara.Windows.Shell</RootNamespace>
+	<RootNamespace>Vanara.Windows.Shell</RootNamespace>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="_InProgress_\**\*" />
+	<Compile Remove="_InProgress_\**\*" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
+	<Reference Include="System.Design" />
+	<Reference Include="System.Drawing" />
+	<Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
-    <Reference Include="WindowsBase" />
+	<Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netcore')) ">
-    <PackageReference Include="System.IO.FileSystem.AccessControl">
-      <Version>4.6.0</Version>
-    </PackageReference>
+	<PackageReference Include="System.IO.FileSystem.AccessControl">
+	  <Version>4.6.0</Version>
+	</PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Vanara.Core.csproj" />
-    <ProjectReference Include="..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj" />
-    <ProjectReference Include="..\PInvoke\ComCtl32\Vanara.PInvoke.ComCtl32.csproj" />
-    <ProjectReference Include="..\PInvoke\Ole\Vanara.PInvoke.Ole.csproj" />
-    <ProjectReference Include="..\PInvoke\Shell32\Vanara.PInvoke.Shell32.csproj" />
-    <ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
-    <ProjectReference Include="..\PInvoke\SearchApi\Vanara.PInvoke.SearchApi.csproj" />
+	<ProjectReference Include="..\Core\Vanara.Core.csproj" />
+	<ProjectReference Include="..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj" />
+	<ProjectReference Include="..\PInvoke\ComCtl32\Vanara.PInvoke.ComCtl32.csproj" />
+	<ProjectReference Include="..\PInvoke\Ole\Vanara.PInvoke.Ole.csproj" />
+	<ProjectReference Include="..\PInvoke\Shell32\Vanara.PInvoke.Shell32.csproj" />
+	<ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
+	<ProjectReference Include="..\PInvoke\SearchApi\Vanara.PInvoke.SearchApi.csproj" />
   </ItemGroup>
 </Project>
