--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -33,6 +33,7 @@
       <dependency id="Vanara.PInvoke.IpHlpApi" version="3.2.14" />
       <dependency id="Vanara.PInvoke.Kernel32" version="3.2.14" />
       <dependency id="Vanara.PInvoke.KtmW32" version="3.2.14" />
+      <dependency id="Vanara.PInvoke.Magnification" version="3.2.14" />
       <dependency id="Vanara.PInvoke.Mpr" version="3.2.14" />
       <dependency id="Vanara.PInvoke.NetApi32" version="3.2.14" />
       <dependency id="Vanara.PInvoke.NetListMgr" version="3.2.14" />
