--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,11 +1,15 @@
 <Project>
   <PropertyGroup>
-    <DocumentationFile>$(MSBuildProjectDirectory)\bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+	<DocumentationFile>$(MSBuildProjectDirectory)\bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+	<!--<DefaultItemExcludes>$(DefaultItemExcludes);**\~*.cs</DefaultItemExcludes>-->
   </PropertyGroup>
   <PropertyGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or '$(TargetFramework)' == 'net45' ">
-    <DefineConstants>$(DefineConstants);ALLOWSPAN</DefineConstants>
+	<DefineConstants>$(DefineConstants);ALLOWSPAN</DefineConstants>
   </PropertyGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
-    <Reference Include="System" />
+	<Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+	<Compile Remove="**\~*.cs" />
   </ItemGroup>
 </Project>
