Added known folder collected code

--- a/UnitTests/Windows.Shell/Windows.Shell.csproj
+++ b/UnitTests/Windows.Shell/Windows.Shell.csproj
@@ -50,6 +50,7 @@
     <Compile Include="RecycleBinTests.cs" />
     <Compile Include="BindContextTests.cs" />
     <Compile Include="ClipboardTests.cs" />
+    <Compile Include="ResourceTests.cs" />
     <Compile Include="WallpaperTests.cs" />
     <Compile Include="ShellLinkTests.cs" />
     <Compile Include="ShellSearchTests.cs" />
