--- a/UnitTests/System/System.csproj
+++ b/UnitTests/System/System.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComputerTests.cs" />
+    <Compile Include="InternetOptionsTests.cs" />
     <Compile Include="NetworkListTests.cs" />
     <Compile Include="JobTests.cs" />
     <Compile Include="PowerTests.cs" />
