--- a/PInvoke/FirewallApi/Vanara.PInvoke.FirewallApi.vbproj
+++ b/PInvoke/FirewallApi/Vanara.PInvoke.FirewallApi.vbproj
@@ -1,22 +1,34 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-	<ProjectExtensions>
-		<SupportedDlls>FirewallApi.dll</SupportedDlls>
-	</ProjectExtensions>
-	<PropertyGroup>
-		<Description>PInvoke API (methods, structures and constants) imported from FirewallApi.dll for Windows Firewall with Advanced Security.</Description>
-		<AssemblyName>Vanara.PInvoke.FirewallApi</AssemblyName>
-		<AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-		<TargetFrameworks>net20;net35;net40;net45;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
-		<DocumentationFile>$(AssemblyName).xml</DocumentationFile>
-		<PackageId>$(AssemblyName)</PackageId>
-		<PackageTags>pinvoke;vanara;net-extensions;interop;FirewallApi;windows firewall</PackageTags>
-		<PackageReleaseNotes />
-	</PropertyGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
-		<ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
-	</ItemGroup>
-	<ItemGroup>
-		<Reference Include="CustomMarshalers" Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) " />
-	</ItemGroup>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+  <ProjectExtensions>
+    <SupportedDlls>FirewallApi.dll</SupportedDlls>
+  </ProjectExtensions>
+  <PropertyGroup>
+    <Description>PInvoke API (methods, structures and constants) imported from FirewallApi.dll for Windows Firewall with Advanced Security.</Description>
+    <AssemblyName>Vanara.PInvoke.FirewallApi</AssemblyName>
+    <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
+    <TargetFrameworks>net20;net35;net40;net45;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <DocumentationFile>$(AssemblyName).xml</DocumentationFile>
+    <PackageId>$(AssemblyName)</PackageId>
+    <PackageTags>pinvoke;vanara;net-extensions;interop;FirewallApi;windows firewall</PackageTags>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+NetworkIsolationDiagnoseConnectFailureAndGetInfo, NetworkIsolationEnumAppContainers, NetworkIsolationEnumerateAppContainerRules, NetworkIsolationFreeAppContainers, NetworkIsolationGetAppContainerConfig, NetworkIsolationGetEnterpriseIdAsync, NetworkIsolationGetEnterpriseIdClose, NetworkIsolationRegisterForAppContainerChanges, NetworkIsolationSetAppContainerConfig, NetworkIsolationSetupAppContainerBinaries, NetworkIsolationUnregisterForAppContainerChanges
+
+Structures
+INET_FIREWALL_AC_BINARIES, INET_FIREWALL_AC_CHANGE, INET_FIREWALL_AC_CAPABILITIES, INET_FIREWALL_APP_CONTAINER, UNIONType
+
+Interfaces
+INetFwAuthorizedApplication, INetFwAuthorizedApplications, INetFwIcmpSettings, INetFwMgr, INetFwOpenPort, INetFwOpenPorts, INetFwPolicy, INetFwPolicy2, INetFwProduct, INetFwProducts, INetFwProfile, INetFwRemoteAdminSettings, INetFwRule, INetFwRule2, INetFwRule3, INetFwRules, INetFwService, INetFwServiceRestriction, INetFwServices
+
+</PackageReleaseNotes>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="CustomMarshalers" Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) " />
+  </ItemGroup>
 </Project>
