--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -29,6 +29,9 @@ CorrespondingAction, StringListPackMethod
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
     <Reference Include="System.Drawing" />
   </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
+    <Reference Include="WindowsBase" />
+  </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or '$(TargetFramework)' == 'net40' ">
     <PackageReference Include="Theraot.Core">
       <Version>3.1.4</Version>
